sass/style.scss
@import 'reset';

//// VARIABLES ////
$primary-font-color: #fff;
$secondary-font-color: #58388b;
$secondary-font-color-bright: #d59ffd;
$primary-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
  sans-serif;
$highlight-color: #d25dda;
$secondary-color: #d59ffd;

//// OTHER ////
:root {
  scroll-behavior: smooth;
}

.site-wrapper {
  max-width: 80%;
  margin: 2.5em auto;
  background-image: radial-gradient(
      circle at 59% 30%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 3%,
      transparent 3%,
      transparent 100%
    ),
    radial-gradient(
      circle at 78% 41%,
      rgba(255, 255, 255, 0.01) 0%,
      rgba(255, 255, 255, 0.01) 3%,
      transparent 3%,
      transparent 100%
    ),
    radial-gradient(
      circle at 15% 80%,
      rgba(255, 255, 255, 0.02) 0%,
      rgba(255, 255, 255, 0.02) 3%,
      transparent 3%,
      transparent 100%
    ),
    radial-gradient(
      circle at 45% 43%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 3%,
      transparent 3%,
      transparent 100%
    ),
    radial-gradient(
      circle at 63% 9%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 7%,
      transparent 7%,
      transparent 100%
    ),
    radial-gradient(
      circle at 71% 80%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 7%,
      transparent 7%,
      transparent 100%
    ),
    radial-gradient(
      circle at 19% 0%,
      rgba(255, 255, 255, 0.01) 0%,
      rgba(255, 255, 255, 0.01) 7%,
      transparent 7%,
      transparent 100%
    ),
    radial-gradient(
      circle at 62% 12%,
      rgba(255, 255, 255, 0.01) 0%,
      rgba(255, 255, 255, 0.01) 7%,
      transparent 7%,
      transparent 100%
    ),
    radial-gradient(
      circle at 46% 76%,
      rgba(255, 255, 255, 0.02) 0%,
      rgba(255, 255, 255, 0.02) 7%,
      transparent 7%,
      transparent 100%
    ),
    radial-gradient(
      circle at 59% 41%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 7%,
      transparent 7%,
      transparent 100%
    ),
    radial-gradient(
      circle at 4% 53%,
      rgba(255, 255, 255, 0.01) 0%,
      rgba(255, 255, 255, 0.01) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 16% 40%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 94% 48%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 47% 6%,
      rgba(255, 255, 255, 0.02) 0%,
      rgba(255, 255, 255, 0.02) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 64% 65%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 58% 40%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 37% 3%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 42% 50%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 5%,
      transparent 5%,
      transparent 100%
    ),
    radial-gradient(
      circle at 21% 78%,
      rgba(255, 255, 255, 0.03) 0%,
      rgba(255, 255, 255, 0.03) 5%,
      transparent 5%,
      transparent 100%
    ),
    linear-gradient(135deg, rgb(93, 55, 170), rgb(147, 89, 199));

  color: $primary-font-color;
  font-family: $primary-font-family;
}

@mixin button {
  border-radius: 8px;
  outline-color: $secondary-color;
  color: $primary-font-color;
  cursor: pointer;
}

.overlay {
  position: fixed;
  width: 35px;
  bottom: 5%;
  right: 5%;
  opacity: 1;
  transition: opacity 0.3s;

  &--hidden {
    opacity: 0;
    pointer-events: none;
  }
}

//// HEADER ////
.header {
  position: relative;
  height: 100vh;
  display: grid;
  grid-template-rows: min-content 1fr;
  align-items: center;
}

.navbar {
  display: grid;
  grid-template-columns: min-content 70%;
  justify-content: space-between;
  align-items: center;

  &__home {
    justify-self: left;
  }

  &__menu {
    justify-self: right;

    &--desktop {
      display: none;
    }

    &--mobile {
      outline-color: $secondary-color;
      background: transparent;
      cursor: pointer;
    }
  }

  &__icon {
    position: relative;
    width: 30px;
    z-index: 1;
  }
}

.main-text {
  width: 80%;
  display: flex;
  flex-direction: column;
  font-size: 4rem;

  &__highlight {
    color: $highlight-color;
  }

  &__inseparable {
    white-space: nowrap;
  }
}

.scroll-sign {
  position: absolute;
  width: 30px;
  height: 50px;
  bottom: 10%;
  left: 50%;
  border: 3px solid rgba(255, 255, 255, 0.8);
  border-radius: 20px;
  transform: translateX(-50%);
  opacity: 1;
  transition: opacity 0.3s;

  &--hidden {
    opacity: 0;
  }

  &__ball {
    position: absolute;
    top: 10%;
    left: 50%;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, 0.8);
    transform: translate(-50%, 0);
    animation: ball-movement ease 1.5s infinite;
  }
}

@keyframes ball-movement {
  0% {
    transform: translate(-50%, 0%);
  }

  50% {
    transform: translate(-50%, 100%);
  }

  100% {
    transform: translate(-50%, 100%);
  }
}

//// SECTIONS ////
.section {
  display: grid;
  overflow: hidden;

  &__header {
    width: 90%;
    margin-bottom: 3em;

    &--alternative {
      justify-self: flex-end;
    }

    &--small {
      width: 70%;
    }
  }

  &__content {
    margin-bottom: 5em;
  }
}

//// ABOUT SECTION ////
.about {
  display: grid;
  align-items: center;
  grid-template-areas:
    'intro'
    'image'
    'details'
    'download';
  gap: 2em;

  &__image {
    width: 100%;
    border-radius: 20px;
    grid-area: image;
  }

  &__intro {
    display: grid;
    grid-area: intro;
    gap: 1em;
    font-size: 1.7rem;
    text-align: justify;
  }

  &__highlight-text {
    color: $highlight-color;
  }

  &__details {
    grid-area: details;
    color: $secondary-color;
    font-size: 1.3rem;
    line-height: 1.1;
    text-align: justify;
  }
}

.download {
  @include button;
  width: 110px;
  padding: 0.5em 0.2em;
  border: 2px solid $secondary-color;
  display: flex;
  // grid-area: download;
  justify-content: space-evenly;
  // justify-self: center;
  align-items: center;
  background: transparent;
  font-size: 1.2rem;

  &__icon {
    width: 13%;
    height: auto;
  }

  &__wrapper {
    justify-self: center;
    grid-area: download;
    text-decoration: none;
  }
}

//// SKILLS SECTION ////
.tiles {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  place-items: center;

  &__tile {
    width: 100px;
    height: 100px;
    margin: 3em 1em;
  }

  &__tile:hover &__description {
    transform: translateY(0);
  }

  &__tile:hover &__main {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }

  &__main {
    width: 100%;
    height: 100%;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    background: linear-gradient(#9948dd, #4d246f);
    transition: 0.3s border-bottom-left-radius, 0.3s border-bottom-right-radius;

    &--unactive {
      background: linear-gradient(#a28bb4, #61506e);
    }
  }

  &__icon {
    width: 70%;
  }

  &__description {
    position: relative;
    width: 100%;
    height: 35%;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    z-index: -1;
    transform: translateY(-102%);
    transition: 0.3s transform;
    background-color: #fff;
    color: $secondary-font-color;
    text-align: center;

    &--unactive {
      color: grey;
    }
  }

  &__header {
    padding-bottom: 0.2em;
    font-size: 1.3rem;
    font-weight: bold;
  }

  &__details {
    font-size: 0.9rem;
  }
}

//// PORTFOLIO SECTION ////
.projects {
  display: grid;
  grid-template-rows: 1fr min-content;
  gap: 1em;

  &__list {
    display: grid;
    grid-template: repeat(2, 1fr) / repeat(2, min-content);
    justify-content: space-between;
    align-items: center;
  }

  &__list-item {
    height: 50px;
  }

  &__link {
    text-decoration: none;
  }

  &__title {
    color: $secondary-font-color-bright;
    font-size: 1.5rem;
    white-space: nowrap;
  }

  &__link:hover &__title {
    color: $primary-font-color;
  }

  &__line {
    padding: 5px 5px;
    position: relative;
    left: 35%;
    color: transparent;
    transition: 0.3s left;

    &::before {
      content: '';
      position: absolute;
      left: -35%;
      top: 50%;
      width: 35%;
      border-bottom: 2px solid $primary-font-color;
      transform: translateY(-50%);
      transition: 0.3s width, 0.3s left;
    }
  }

  &__link:hover &__line {
    color: $secondary-font-color-bright;
    left: 15%;

    &::before {
      left: -15%;
      width: 15%;
    }
  }

  &__details {
    display: grid;
    gap: 1.5em;
  }

  &__image {
    width: 100%;
    border-radius: 15px;
  }

  &__about {
    font-size: 1.3rem;
    line-height: 1.4;
    text-align: justify;
  }
}

//// CONTACT SECTION ////
.contact {
  position: relative;
  padding: 1em;
  border-radius: 20px;
  display: grid;
  justify-items: center;
  background-color: #fff;

  &__info {
    padding: 2.5em;
    display: grid;
    gap: 2em;
    background-color: #9948dd;
    border-radius: 20px;
    box-sizing: border-box;
  }

  &__header {
    font-size: 2rem;
  }

  &__details {
    width: 80%;
    font-size: 1.1rem;
    line-height: 1.2;
    color: #eed6ff;
  }

  &__item {
    display: flex;
    align-items: center;
    gap: 0.7em;
    font-size: 1.2rem;
  }

  &__link {
    text-decoration: none;
    color: inherit;
  }

  &__icon-set {
    display: grid;
    grid-auto-columns: min-content;
    gap: 1.5em;
    place-items: center;
  }

  &__icon-wrapper {
    grid-row: 1;
  }

  &__icon {
    width: 17px;

    &--large {
      width: 22px;
    }
  }
}

.form {
  width: 100%;
  margin: 2em 0 1em 0;
  display: grid;
  gap: 1em;
  justify-items: center;

  &__entry {
    position: relative;
    width: 90%;
    height: 30px;

    &--large {
      height: 100px;
    }
  }

  &__label {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 1;
    color: #9948dd;
  }

  &__input {
    position: absolute;
    width: 100%;
    border: none;
    border-bottom: 1px solid #9948dd;
    outline: none;
    left: 0;
    bottom: 0;
    color: $secondary-font-color;

    &--area {
      height: 82%;
      resize: none;
    }
  }

  &__button {
    @include button;
    padding: 1em;
    margin-top: 1em;
    background-color: #9948dd;

    &:hover {
      background-color: $secondary-font-color;
    }

    &--disabled {
      background-color: #a499af;
      cursor: not-allowed;

      &:hover {
        background-color: #6f6875;
      }
    }
  }
}

//// COPYRIGHT ////
.copyright {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  color: #e9cbff;
  font-size: 0.8rem;

  &__inseparable {
    white-space: nowrap;
  }
}

